[gd_scene load_steps=21 format=3 uid="uid://cjm5lrxicdgsf"]

[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/Player_SCRIPT.gd" id="1_5mhs1"]
[ext_resource type="Script" path="res://Textures/Icons/Script Icons/Scripts/CameraIcon_SCRIPT.gd" id="2_37tst"]
[ext_resource type="Texture2D" uid="uid://tmqrfb1atg1j" path="res://Textures/Crosshairs/Expland_Crosshair.png" id="2_606ex"]
[ext_resource type="FontFile" uid="uid://bhbimgl3hvve3" path="res://Fonts/CabinetGrotesk/CabinetGrotesk-Bold.otf" id="3_yecwp"]
[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/CrosshairCanvas/HealthLBL_SCRIPT.gd" id="4_56i84"]
[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/CrosshairCanvas/Crosshair_SCRIPT.gd" id="5_56a8a"]
[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/InventoryLayer/InventoryBG_SCRIPT.gd" id="7_e7c62"]
[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/OverlayLayer/RedOverlay_SCRIPT.gd" id="7_gnu1v"]
[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/InventoryLayer/InventoryLayerOverlay.gd" id="8_qhbaq"]
[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/OverlayLayer/Overlay_SCRIPT.gd" id="8_uxqns"]
[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/DeathScreen/BlackOverlay_SCRIPT.gd" id="9_g6nwl"]
[ext_resource type="Script" path="res://Scenes and Scripts/Utility Scripts/IgnoreMouseFilter.gd" id="9_svfxy"]
[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/DeathScreen/RandomText_SCRIPT.gd" id="10_6w37c"]
[ext_resource type="Texture2D" uid="uid://ckn730v2wn1y8" path="res://Textures/Icons/Expland-icon.png" id="10_ff6pi"]
[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/DeathScreen/GetUp_SCRIPT.gd" id="11_0enap"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_e8ep2"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ocuv0"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2kg3l"]
bg_color = Color(0.151276, 0.151276, 0.151276, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xa5l0"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tmhy"]
bg_color = Color(0.103744, 0.103744, 0.103744, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_5mhs1")
Fade_In = true
FOV = 9999

[node name="AutoSaveTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_e8ep2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_ocuv0")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66439, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
script = ExtResource("2_37tst")

[node name="CrosshairCanvas" type="CanvasLayer" parent="Head/Camera3D"]

[node name="HealthLBL" type="Label" parent="Head/Camera3D/CrosshairCanvas"]
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.005
anchor_right = 0.137
anchor_bottom = 0.114
offset_left = -0.456
offset_top = -0.24
offset_right = 0.175995
offset_bottom = 0.127998
theme_override_fonts/font = ExtResource("3_yecwp")
theme_override_font_sizes/font_size = 30
text = "Health : 100"
script = ExtResource("4_56i84")

[node name="Crosshair" type="TextureRect" parent="Head/Camera3D/CrosshairCanvas"]
anchors_preset = -1
anchor_left = 0.494
anchor_top = 0.489
anchor_right = 0.506
anchor_bottom = 0.511
offset_left = -0.0880127
offset_top = 0.127991
offset_right = 0.0879517
offset_bottom = -0.128021
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_606ex")
expand_mode = 1
script = ExtResource("5_56a8a")

[node name="InventoryLayer" type="CanvasLayer" parent="Head/Camera3D"]
visible = false

[node name="Background" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.34
anchor_top = 0.184
anchor_right = 0.66
anchor_bottom = 0.816
offset_left = -0.179993
offset_top = -0.23201
offset_right = 0.179993
offset_bottom = 0.231995
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2kg3l")
script = ExtResource("7_e7c62")

[node name="Background_2" type="Panel" parent="Head/Camera3D/InventoryLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.348
anchor_top = 0.194
anchor_right = 0.654
anchor_bottom = 0.802
offset_left = 0.103973
offset_top = 0.287994
offset_right = -0.408081
offset_bottom = 0.303955
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xa5l0")
script = ExtResource("7_e7c62")

[node name="Background_3" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.348
anchor_top = 0.194
anchor_right = 0.654
anchor_bottom = 0.27
offset_left = 0.103973
offset_top = 0.287994
offset_right = -0.408081
offset_bottom = 0.0399933
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7tmhy")
script = ExtResource("7_e7c62")

[node name="Overlay" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_qhbaq")

[node name="Slot1_BG" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.357639
anchor_top = 0.277778
anchor_right = 0.448785
anchor_bottom = 0.439815
offset_top = -1.52588e-05
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot1_BG_2" type="Panel" parent="Head/Camera3D/InventoryLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.360243
anchor_top = 0.282407
anchor_right = 0.446181
anchor_bottom = 0.435185
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot2_BG" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.454861
anchor_top = 0.277778
anchor_right = 0.546007
anchor_bottom = 0.439815
offset_top = -1.52588e-05
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot2_BG_2" type="Panel" parent="Head/Camera3D/InventoryLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.457465
anchor_top = 0.282407
anchor_right = 0.543403
anchor_bottom = 0.435185
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot3_BG" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.552083
anchor_top = 0.277778
anchor_right = 0.643229
anchor_bottom = 0.439815
offset_top = -1.52588e-05
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot3_BG_2" type="Panel" parent="Head/Camera3D/InventoryLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.554688
anchor_top = 0.282407
anchor_right = 0.640625
anchor_bottom = 0.435185
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot4_BG" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.357639
anchor_top = 0.45679
anchor_right = 0.448785
anchor_bottom = 0.618827
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot4_BG_2" type="Panel" parent="Head/Camera3D/InventoryLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.360243
anchor_top = 0.46142
anchor_right = 0.446181
anchor_bottom = 0.614198
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot5_BG" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.454861
anchor_top = 0.45679
anchor_right = 0.546007
anchor_bottom = 0.618827
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot5_BG_2" type="Panel" parent="Head/Camera3D/InventoryLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.457465
anchor_top = 0.46142
anchor_right = 0.543403
anchor_bottom = 0.614198
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot6_BG" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.552083
anchor_top = 0.45679
anchor_right = 0.643229
anchor_bottom = 0.618827
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot6_BG_2" type="Panel" parent="Head/Camera3D/InventoryLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.554688
anchor_top = 0.46142
anchor_right = 0.640625
anchor_bottom = 0.614198
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot7_BG" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.357639
anchor_top = 0.635802
anchor_right = 0.448785
anchor_bottom = 0.79784
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot7_BG_2" type="Panel" parent="Head/Camera3D/InventoryLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.360243
anchor_top = 0.640432
anchor_right = 0.446181
anchor_bottom = 0.79321
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot8_BG" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.454861
anchor_top = 0.635802
anchor_right = 0.546007
anchor_bottom = 0.79784
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot8_BG_2" type="Panel" parent="Head/Camera3D/InventoryLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.457465
anchor_top = 0.640432
anchor_right = 0.543403
anchor_bottom = 0.79321
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot9_BG" type="Panel" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.552083
anchor_top = 0.635802
anchor_right = 0.643229
anchor_bottom = 0.79784
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Slot9_BG_2" type="Panel" parent="Head/Camera3D/InventoryLayer"]
modulate = Color(0, 0, 0, 1)
anchors_preset = -1
anchor_left = 0.554688
anchor_top = 0.640432
anchor_right = 0.640625
anchor_bottom = 0.79321
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_svfxy")
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.388
anchor_top = 0.187
anchor_right = 0.612
anchor_bottom = 0.279
offset_left = -0.476013
offset_top = 2.324
offset_right = 0.475952
offset_bottom = 1.70799
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yecwp")
theme_override_font_sizes/font_size = 50
text = "INVENTORY"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_svfxy")

[node name="SLOT_1" type="TextureRect" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.363715
anchor_top = 0.28858
anchor_right = 0.44184
anchor_bottom = 0.427469
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SLOT_2" type="TextureRect" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.461806
anchor_top = 0.28858
anchor_right = 0.539931
anchor_bottom = 0.427469
texture = ExtResource("10_ff6pi")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SLOT_3" type="TextureRect" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.559028
anchor_top = 0.28858
anchor_right = 0.637153
anchor_bottom = 0.427469
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SLOT_4" type="TextureRect" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.363715
anchor_top = 0.467593
anchor_right = 0.44184
anchor_bottom = 0.606481
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SLOT_5" type="TextureRect" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.461806
anchor_top = 0.467593
anchor_right = 0.539931
anchor_bottom = 0.606481
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SLOT_6" type="TextureRect" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.559028
anchor_top = 0.467593
anchor_right = 0.637153
anchor_bottom = 0.606481
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SLOT_7" type="TextureRect" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.363715
anchor_top = 0.646605
anchor_right = 0.44184
anchor_bottom = 0.785494
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SLOT_8" type="TextureRect" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.461806
anchor_top = 0.646605
anchor_right = 0.539931
anchor_bottom = 0.785494
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="SLOT_9" type="TextureRect" parent="Head/Camera3D/InventoryLayer"]
anchors_preset = -1
anchor_left = 0.559028
anchor_top = 0.646605
anchor_right = 0.637153
anchor_bottom = 0.785494
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="DeathScreen" type="CanvasLayer" parent="Head/Camera3D"]

[node name="BlackOverlay" type="ColorRect" parent="Head/Camera3D/DeathScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("9_g6nwl")

[node name="RandomText" type="Label" parent="Head/Camera3D/DeathScreen/BlackOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -29.5
offset_right = 233.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yecwp")
theme_override_font_sizes/font_size = 50
text = "What have you done?"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_6w37c")

[node name="GetUp" type="Label" parent="Head/Camera3D/DeathScreen/BlackOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -29.5
offset_right = 140.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yecwp")
theme_override_font_sizes/font_size = 50
text = "Get Up."
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_0enap")

[node name="OverlayLayer" type="CanvasLayer" parent="Head/Camera3D"]

[node name="RedOverlay" type="ColorRect" parent="Head/Camera3D/OverlayLayer"]
process_priority = 10
editor_description = "A Multipurpose overlay."
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.016, 0, 0.808)
script = ExtResource("7_gnu1v")

[node name="Overlay" type="ColorRect" parent="Head/Camera3D/OverlayLayer"]
process_priority = 10
editor_description = "A Multipurpose overlay."
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("8_uxqns")

[connection signal="timeout" from="AutoSaveTimer" to="." method="_on_auto_save_timer_timeout"]
